[package]
name = "espresso-systems-common"
version = "0.3.0"
authors = ["Victor Koenders <git@trangar.com>"]
edition = "2021"
description = "Common constants and utility functions for Espresso Systems codebases"
repository = "https://github.com/espressosystems/espresso-sytem-common"
license-file = "LICENSE"

[features]
std = []
metrics = ["std"]
